<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dfp.bikerepairevre.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="4"        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bike"
            android:scaleType="centerCrop"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.79"

        >

        <TextView

            android:textAlignment="center"
            android:background="#00838F"
            android:textColor="@color/alb_aboutus"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comp_description"
            />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        >

        <ImageView
            android:id="@+id/icon_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/location"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_toRightOf="@id/icon_pin"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        >

        <ImageView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone_icon"
            />
        <TextView
            android:id="@+id/phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_toRightOf="@id/phone"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        >

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email_icon"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_toRightOf="@id/email_icon"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        >

        <ImageView
            android:id="@+id/schedule_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/schedule_icon"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule"
            android:layout_toRightOf="@id/schedule_icon"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            />
    </RelativeLayout>











</LinearLayout>